[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | Docker
  | maintenance-scripts
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[project]
name = "landing-page-art"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pre-commit>=4.2.0",
    "reflex>=0.7.14",
]
